Complete refactoring, separating into two modules for different versions e.g: 1.8.8 and Paper 1.21.x